--- a/perl/.htaccess
+++ b/perl/.htaccess
@@ -1,6 +1,6 @@
 SetHandler perl-script
 PerlHandler Plack::Handler::Apache2
-PerlSetVar psgi_app _REPO_DIR_/perl/index.pl
+PerlSetVar psgi_app ${OPENSHIFT_REPO_DIRp}/erl/index.pl
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-l
